@@ -35,12 +35,14 @@
  * Changes
  * -------
  * 04-Feb-2005 : Version 1 (DG);
+ * 09-Jul-2008 : Added new field into testEquals() (DG);
  *
  */
 
 package org.jfree.chart.title.junit;
 
 import java.awt.Color;
+import java.awt.GradientPaint;
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.ObjectInput;
@@ -82,6 +84,14 @@ public class CompositeTitleTests extends TestCase {
     }
 
     /**
+     * Some checks for the constructor.
+     */
+    public void testConstructor() {
+    	CompositeTitle t = new CompositeTitle();
+    	assertNull(t.getBackgroundPaint());
+    }
+
+    /**
      * Check that the equals() method distinguishes all fields.
      */
     public void testEquals() {
@@ -114,6 +124,13 @@ public class CompositeTitleTests extends TestCase {
         t2.getContainer().add(new TextTitle("T1"));
         assertTrue(t1.equals(t2));
 
+        t1.setBackgroundPaint(new GradientPaint(1.0f, 2.0f, Color.red,
+        		3.0f, 4.0f, Color.yellow));
+        assertFalse(t1.equals(t2));
+        t2.setBackgroundPaint(new GradientPaint(1.0f, 2.0f, Color.red,
+        		3.0f, 4.0f, Color.yellow));
+        assertTrue(t1.equals(t2));
+
     }
 
     /**
@@ -136,6 +153,8 @@ public class CompositeTitleTests extends TestCase {
     public void testCloning() {
         CompositeTitle t1 = new CompositeTitle(new BlockContainer());
         t1.getContainer().add(new TextTitle("T1"));
+        t1.setBackgroundPaint(new GradientPaint(1.0f, 2.0f, Color.red,
+        		3.0f, 4.0f, Color.yellow));
         CompositeTitle t2 = null;
         try {
             t2 = (CompositeTitle) t1.clone();
@@ -154,6 +173,8 @@ public class CompositeTitleTests extends TestCase {
     public void testSerialization() {
         CompositeTitle t1 = new CompositeTitle(new BlockContainer());
         t1.getContainer().add(new TextTitle("T1"));
+        t1.setBackgroundPaint(new GradientPaint(1.0f, 2.0f, Color.red,
+        		3.0f, 4.0f, Color.blue));
         CompositeTitle t2 = null;
         try {
             ByteArrayOutputStream buffer = new ByteArrayOutputStream();
@@ -168,7 +189,7 @@ public class CompositeTitleTests extends TestCase {
             in.close();
         }
         catch (Exception e) {
-            System.out.println(e.toString());
+            e.printStackTrace();
         }
         assertEquals(t1, t2);
     }
